welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:3: error: '(' expected but identifier found.
  if !(a==b){if !(c==a){return 1};return 0}
     ^